--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ nav li > a {
 .banner {
   display: flex;
   justify-content: space-between;
-  margin: 80px 0;
+  padding: 80px 0;
   align-items: center;
 }
 .banner-content {
@@ -65,9 +65,71 @@ nav li > a {
 }
 .banner-pics {
   background-image: url("./images/Circle\ design.svg");
+  background-size: cover;
+
+  text-align: center;
 }
 .banner-img {
-  width: 100%;
+  padding-top: 50px;
+  width: 90%;
 }
 
 /* other website section here  */
+.website-logos {
+  max-width: 1440px;
+  margin: 80px auto;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  /* gap: 20px; */
+  justify-content: center;
+}
+/* main section here  */
+main {
+  padding: 100px 190px;
+}
+.main-title {
+  color: #3a3a3a;
+  font-size: 28px;
+  font-weight: 600;
+}
+.box-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  gap: 20px;
+  justify-content: center;
+}
+.box {
+  padding: 17px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+.box-img {
+  width: 90%;
+}
+.box-info {
+  max-width: 196px;
+}
+
+/* responsive design  */
+/* mobiles  */
+@media screen and (max-width: 576px) {
+  header {
+    padding: 20px;
+  }
+  nav,
+  .banner {
+    flex-direction: column;
+    gap: 30px;
+    padding: 20px 0;
+  }
+  .banner-content {
+    text-align: center;
+  }
+  .website-logos {
+    grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+    gap: 20px;
+  }
+}
