--- a/style.css
+++ b/style.css
@@ -86,6 +86,11 @@ nav li > a {
 /* main section here  */
 main {
   padding: 100px 190px;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; */
+  text-align: center;
 }
 .main-title {
   color: #3a3a3a;
@@ -96,8 +101,9 @@ main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
-  gap: 20px;
+  gap: 32px;
   justify-content: center;
+  align-items: center;
 }
 .box {
   padding: 17px;
@@ -106,7 +112,7 @@ main {
   box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
 }
 .box-img {
-  width: 90%;
+  width: 100%;
 }
 .box-info {
   max-width: 196px;
