--- a/style.css
+++ b/style.css
@@ -92,8 +92,8 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
-  text-align: center;
+  justify-content: center;
+  /* text-align: center; */
   /* border: 1px solid red; */
   position: relative;
 }
@@ -107,7 +107,7 @@ main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
-  gap: 32px;
+  gap: 1rem;
   justify-content: space-around;
   align-items: center;
   /* max-width: 1440px; */
@@ -119,30 +119,34 @@ main {
   border-radius: 5px;
   background: #fff;
   box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+  text-align: left;
 }
 .box-img {
   width: 100%;
 }
 .box-info {
-  max-width: 196px;
+  max-width: 156px;
+  font-size: 14px;
+  color: #767474;
 }
 .see-more {
   background-color: white;
   color: #e02c6d;
   border: none;
-  position: absolute;
-  right: 15%;
+  position: relative;
+  right: 0;
   bottom: 0;
   /* bottom: 10px; */
-  /* margin-top: 10px; */
+  margin-top: 10px;
 }
 
 /* feature section  */
 .feature-section {
   display: flex;
-  padding: 100px 160px;
+  padding: 100px 0;
   justify-content: space-between;
-  align-content: center;
+  align-items: center;
+  gap: 30px;
 }
 
 .feature-pic {
@@ -154,7 +158,7 @@ main {
 }
 .feature-title {
   color: #0a0826;
-  font-size: 38px;
+  font-size: 2.5rem;
   font-weight: 700;
 }
 .feature-text {
@@ -202,6 +206,9 @@ footer > i {
     width: 100%;
     padding: 5px;
   }
+  li > .common {
+    font-size: 12px;
+  }
   .banner-content {
     text-align: center;
   }
@@ -217,13 +224,33 @@ footer > i {
     padding: 10px;
     gap: 20px;
   }
+  .feature-content {
+    text-align: center;
+  }
 }
 @media screen and (min-width: 577px) and (max-width: 960px) {
   header,
   main {
-    padding: 20px 80px;
+    padding: 20px 40px;
+  }
+  .box-title {
+    font-size: 1.25rem;
   }
   .feature-section {
     padding: 30px;
+  }
+  .feature-content {
+    margin-left: 30px;
+  }
+  .feature-text {
+    max-width: 400px;
+    font-size: 14px;
+  }
+  .feature-title {
+    font-size: 2rem;
+  }
+
+  .feature-img {
+    width: 50%;
   }
 }
